--- a/css/main.scss
+++ b/css/main.scss
@@ -2548,8 +2548,16 @@ Add GYM Screenshot support @https://github.com/gymnasium/gym-screenshots
     display: none !important;
   }
 
-  // Add gray background to youtube videos, since they will never load in gym-snaps
-  #course-preview iframe {
+  // Add gray background to youtube videos and other video IFRAMEs, since they will likely never load in gym-snaps (note: Wistia loads, BTW)
+  // Course About
+  #course-preview iframe,
+  // Take 5
+  .embed-responsive iframe,
+  // Webinars
+  .event-video .wistia_embed,
+  .event-video iframe,
+  // About
+  .iframe-video-holder iframe {
     background-color: #bbb !important;
   }
 }
