Update live stream hero
- Update development domain

--- a/_includes/heros/hero-live-stream.html
+++ b/_includes/heros/hero-live-stream.html
@@ -3,7 +3,7 @@
 {%- case jekyll.environment -%}
 
 {%- when "development" -%}
-{%- assign domain_parent = "gymnasium.dev" -%}
+{%- assign domain_parent = "staging.thegymcms.com" -%}
 
 {%- when "staging" -%}
 {%- assign domain_parent = "courses.gymna.si" -%}
