Update twitch embed
- Add quotes to domain

--- a/_includes/heros/live-streams/embed-twitch.html
+++ b/_includes/heros/live-streams/embed-twitch.html
@@ -8,7 +8,7 @@
     width: 320,
     height: 180,
     // Only needed if embedded on other websites
-    parent: [{{ domain_parent }}]
+    parent: ["{{ domain_parent }}"]
   };
   var player = new Twitch.Player("twitch", options);
   player.setVolume(0.5);
