Update twitch embed
- Add layout option

--- a/_includes/heros/live-streams/embed-twitch.html
+++ b/_includes/heros/live-streams/embed-twitch.html
@@ -3,6 +3,7 @@
 <script>
   var options = {
     channel: "{{ hero.twitch_channel }}",
+    layout: "{{ hero.twitch_layout }}",
     width: 320,
     height: 180,
     // Only needed if embedded on other websites
