--- a/_includes/heros/live-streams/embed-twitch.html
+++ b/_includes/heros/live-streams/embed-twitch.html
@@ -4,8 +4,8 @@
   var options = {
     channel: "{{ hero.twitch_channel }}",
     layout: "{{ hero.twitch_layout }}",
-    width: 320,
-    height: 180,
+    width: "100%",
+    height: "56%",
     // Only needed if embedded on other websites
     parent: ["{{ domain_parent }}"]
   };
