--- a/_includes/heros/live-streams/embed-twitch.html
+++ b/_includes/heros/live-streams/embed-twitch.html
@@ -1,14 +1,15 @@
-<script src="https://player.twitch.tv/js/embed/v1.js"></script>
-<div id="twitch"></div>
+<script async src="https://player.twitch.tv/js/embed/v1.js"></script>
+<div id="twitch-video-embed"></div>
 <script>
   var options = {
     channel: "{{ hero.twitch_channel }}",
     layout: "{{ hero.twitch_layout }}",
-    width: "100%",
-    height: "56%",
+    width: "{{ hero.twitch_width }}",
+    height:"{{ hero.twitch_height }}",
+    theme: "{{ hero.twitch_theme }}",
     // Only needed if embedded on other websites
     parent: ["{{ domain_parent }}"]
   };
-  var player = new Twitch.Player("twitch", options);
+  var player = new Twitch.Player("twitch-video-embed", options);
   player.setVolume(0.5);
 </script>
