--- a/_includes/heros/live-streams/embed-twitch.html
+++ b/_includes/heros/live-streams/embed-twitch.html
@@ -4,8 +4,8 @@
   var options = {
     channel: "{{ hero.twitch_channel }}",
     layout: "{{ hero.twitch_layout }}",
-    width: "{{ hero.twitch_width }}",
-    height:"{{ hero.twitch_height }}",
+    width: "{{ hero.embed_width }}",
+    height:"{{ hero.embed_height }}",
     theme: "{{ hero.twitch_theme }}",
     // Only needed if embedded on other websites
     parent: ["{{ domain_parent }}"]
