Update youtube embed
- Add width and height variables

--- a/_includes/heros/live-streams/embed-youtube.html
+++ b/_includes/heros/live-streams/embed-youtube.html
@@ -1,1 +1,1 @@
-<iframe width="320" height="180" src="https://www.youtube.com/embed/{{ hero.youtube_channel}}" frameborder="0" allowfullscreen></iframe>
+<iframe width="{{ hero.embed_width }}" height="{{ hero.embed_height }}" src="https://www.youtube.com/embed/{{ hero.youtube_channel }}" frameborder="0" allowfullscreen></iframe>
