Fix forum seach icon position

--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -481,10 +481,8 @@ section.discussion::after {
 }
 .forum-nav-browse-filter .icon {
   right: 11px;
-  // font-size: 0.75rem;
   position: absolute;
-  margin-top: -6px;
-  top: 50%;
+  top: 14px;
 }
 
 .forum-nav-browse-menu-following .icon {
