--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -100,7 +100,7 @@
   padding: 0;
   font-weight: normal;
   margin: 0 0 -12px; // offset to ensure being vertical centered above white panel
-  
+
   li,
   .tab {
     display: inline-block;
@@ -188,7 +188,7 @@
     box-shadow: none;
     padding: 0;
     text-decoration: none;
-    
+
     &.is-open {
       font-weight: bold;
     }
@@ -272,15 +272,15 @@
       user-select: none;
       cursor: text;
     }
-    
+
     &:only-of-type:focus {
       outline: none;
     }
-    
+
     &:only-of-type .icon {
       display: none;
     }
-    
+
     &:only-of-type .group-heading {
       line-height: 1.25 !important;
       letter-spacing: 1px;
@@ -301,7 +301,7 @@
     font-family: $gym-font-stack;
     background-color: #444;
 
-    
+
 
     ul.ui-accordion-content a p {
       color: #ebebeb;
@@ -334,10 +334,10 @@
 // Course Wrapper
 .course-wrapper {
   margin-top: 20px;
-  
+
   main {
     padding: 20px;
-  
+
     .hd-1,
     .hd-2,
     .hd-3,
@@ -352,11 +352,11 @@
       line-height: inherit;
       color: #474747;
     }
-  
+
     .hd-3 {
       margin-bottom: 10px;
     }
-  
+
     h2 {
       font-weight: 600;
       text-transform: initial;
@@ -429,7 +429,7 @@
     }
 
     .submit-attempt-container {
-        
+
       flex-grow: 1;
 
       @include breakpoint(medium, max) {
@@ -476,9 +476,14 @@
       display: block;
       font: 1em/1.5 $gym-text-font-stack;
       color: #444;
+      text-transform: none;
       margin-top: 0;
       margin-left: 1.6em;
       width: 100%;
+    }
+
+    .solution-span + label {
+      margin-left: 0;
     }
 
     pre {
