--- a/css/main.scss
+++ b/css/main.scss
@@ -182,10 +182,14 @@ body.view-in-course {
         color: $gym-orange !important;
       }
     }
-  }
 
-  img[class="open-edx-logo"] {
-    max-width: 10.9375em;
+    .footer-link-list img {
+      max-width: 1.5em;
+    }
+
+    img[class="open-edx-logo"] {
+      max-width: 10.9375em;
+    }
   }
 }
 
