Update courseware handouts list
- Add spacing for better readability and usability

--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -888,6 +888,12 @@ section.handouts {
   dt {
     font-family: $gym-font-stack;
     font-weight: 600;
+    margin-top: 1.8rem;
+    margin-bottom: 0.4rem;
+  }
+
+  dd:not(dt + dd) {
+    margin-bottom: 0.8rem;
   }
 }
 
