Update courseware about page text
- Update style hook, not the entire body

--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -2,7 +2,7 @@
 @import "functions";
 
 // Course About
-.gym-course-about {
+.gym-course-about .main-container {
   font-size: 16px;
 
   .course-about-overview,
