update tab nav spacing

--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -197,7 +197,7 @@
 .tabs {
   padding: 0;
   font-weight: normal;
-  margin: 0 0 -12px; // offset to ensure being vertical centered above white panel
+  margin: 4px 0 -8px; // offset to ensure being vertical centered above white panel
 
   li,
   .tab {
