--- a/_includes/heros/articles/meet-the-metaverse.html
+++ b/_includes/heros/articles/meet-the-metaverse.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="{{ site.url }}/css/heros/articles/meet-the-metaverse.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="preload" href="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-1280w.jpg?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
 <link rel="preload" href="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-768w.jpg?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)" fetchpriority="high">
 <script nomodule src="{{ site.url }}/js/polyfills/picture/plugins/intrinsic-dimension/pf.intrinsic.min.js?{{ site.time | date:'%s' }}"></script>
 <script nomodule src="{{ site.url }}/js/polyfills/picture/picturefill.min.js?{{ site.time | date:'%s' }}"></script>
@@ -7,7 +8,7 @@
     <div class="content">
       <div class="image">
         <picture>
-          <source srcset="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-768w.jpg?{{ site.time | date:'%s' }}" width="768" height="715" media="(min-width: 75em)">
+          <source srcset="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-768w.jpg?{{ site.time | date:'%s' }}" width="768" height="715" media="(min-width: 1200px)">
           <img alt="Three people from the Gymnasium team meet in the metaverse at a virtual conference room using Spatial." src="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-1280w.jpg?{{ site.time | date:'%s' }}" width="1280" height="720" decoding="async" fetchpriority="high">
         </picture>
       </div>
