--- a/css/take5.scss
+++ b/css/take5.scss
@@ -516,9 +516,20 @@ details.take5--transcript {
     margin-top: 1em;
   }
 
+  ol,
+  ul {
+    padding-left: 1.25em;
+  }
+
+  li,
+  blockquote {
+    line-height: 1.45;
+  }
+
   li {
     font-size: 1.15em;
-    line-height: 1.45;
+    padding-left: 0.8em;
+    margin-top: inherit;
   }
 
   [class*="language-"] {
