--- a/css/main.scss
+++ b/css/main.scss
@@ -337,7 +337,7 @@ header.global {
 }
 
 .content-wrapper#content {
-  padding-bottom: 1em;
+  // padding-bottom: 1em;
   background-color: $gym-light-page-background;
 }
 
