--- a/css/take5.scss
+++ b/css/take5.scss
@@ -505,8 +505,8 @@ main h3 {
   display: inline-block;
 }
 
-details.take5--transcript {
-  margin-top: 1.2em;
+article.take5--transcript {
+  margin-top: 1.6em;
 }
 
 #tutorial-transcript {
