--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -31,11 +31,13 @@
       type="text/css"
     /> -->
 
-    <script
+    <!-- <script
       type="text/javascript"
       src="{{site.gymurl}}/static/js/lms-main_vendor.js"
       charset="utf-8"
-    ></script>
+    ></script> -->
+
+    <!-- TESTING! -->
 
     {%- comment -%}Include meta components for DRYness{%- endcomment -%}
     {%- include /partials/meta.html -%}
