--- a/_layouts/test-home.html
+++ b/_layouts/test-home.html
@@ -1,3 +1,5 @@
+<!-- TODO: do we need this file (can we use test-home-minimal instead?) -->
+
 <!DOCTYPE html>
 <!--[if lte IE 9]><html class="ie ie9 lte9" lang="en"><![endif]-->
 <!--[if !IE]><!-->
