--- a/css/main.scss
+++ b/css/main.scss
@@ -1395,5 +1395,7 @@ aside.system-status {
 @import "migrated-fixes";
 
 
+@import "bootstrap";
+
 // Import gym-snaps support
 @import "components/gym-snaps";
