--- a/css/take5.scss
+++ b/css/take5.scss
@@ -513,6 +513,8 @@ article.take5--transcript {
   ol,
   ul,
   blockquote {
+    font-size: 16px;
+    line-height: 1.45;
     margin-top: 1.15em;
   }
 
@@ -522,12 +524,11 @@ article.take5--transcript {
   }
 
   li,
-  blockquote {
-    line-height: 1.45;
+  blockquote p {
+    font-size: 1.15em;
   }
 
   li:not(blockquote li) {
-    font-size: 1.15em;
     padding-left: 0.8em;
     margin-top: inherit;
   }
@@ -554,11 +555,6 @@ article.take5--transcript {
   .example {
     background-color: transparent;
     padding: 1.2em;
-  }
-
-  blockquote p {
-    font-size: inherit;
-    line-height: inherit;
   }
 
   blockquote p:first-child {
