--- a/_includes/take5/catalog-topic-group.html
+++ b/_includes/take5/catalog-topic-group.html
@@ -21,7 +21,7 @@
       <article class="tutorial">
         <div class="artwork" data-duration="{{ item.video_duration }}">
           <a href="{{ item.title | slugify | prepend: base_path }}" title="Watch Video">
-            <img alt="{{ item.title }}" src="{{ site.url }}{{ item.poster_art }}" width="1280" height="720" decoding="async" loading="lazy">
+            <img alt="{{ item.title }}" src="{{ site.url }}{{ item.poster_art }}?{{ site.time | date:'%s' }}" width="1280" height="720" decoding="async" loading="lazy">
           </a>
         </div>
         <header>
