--- a/css/hero-live-stream.scss
+++ b/css/hero-live-stream.scss
@@ -3,10 +3,6 @@
 @import 'variables';
 @import 'mixins';
 
-.home {
-  background: none;
-}
-
 #live-stream {
   border-bottom: 4em solid $gym-dark-gray-2;
 }
@@ -23,7 +19,6 @@
 }
 
 #live-stream .byline {
-  border: 1px dashed transparent;
   margin-top: .8em;
   margin-bottom: 0;
 }
@@ -33,30 +28,30 @@
   margin-left: 0;
 }
 
-@include breakpoint(36em, min) {
+@include breakpoint(small, min) {
 
-#live-stream header h2,
-#live-stream .byline,
-#live-stream .byline dt {
-  display: inline;
-}
+  #live-stream header h2,
+  #live-stream .byline,
+  #live-stream .byline dt {
+    display: inline;
+  }
 
-#live-stream header {
-  padding: 1.6em 0 .4em;
-}
+  #live-stream header {
+    padding: 1.6em 0 .4em;
+  }
 
-#live-stream header h2 {
-  line-height: 1;
-  vertical-align: baseline;
-}
+  #live-stream header h2 {
+    line-height: 1;
+    vertical-align: baseline;
+  }
 
-#live-stream .byline {
-  margin-left: 1.2em;
-}
+  #live-stream .byline {
+    margin-left: 1.2em;
+  }
 
-#live-stream .byline dd {
-  width: 52%;
-}
+  #live-stream .byline dd {
+    width: 52%;
+  }
 
 }
 
