--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -119,11 +119,13 @@ JS or tracking pixels to be included at the bottom of the theme
 {%- if site.environment == "local" -%}
   {%- assign geolocator_src = "?gymdev=true" | prepend: geolocator_src -%}
 {%- endif -%}
-
-<script id="gymjs" async defer src="{{site.url}}/js/main.js?{{ site.time | date:'%s' }}"></script>
-
 {%- comment -%} Disabling for now...- RE
 <iframe id="geolocator" src="{{ geolocator_src }}" frameborder="0" style="width:1px;height:1px;visibility:hidden;display:none;"></iframe>
 {%- endcomment -%}
 
-<script async defer src="{{site.url}}/js/vendor/cookiebanner.js?{{ site.time | date:'%s' }}" id="cookiebanner" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
+{%- comment -%} 
+Note: this is our main JS, but we've attached the requisite cookiebanner ID & attributes to it to ensure it initializes properly, since it's now part of the main.js
+{%- endcomment -%}
+<script id="cookiebanner" async defer src="{{site.url}}/js/main.js?{{ site.time | date:'%s' }}" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
+
+
