--- a/_sass/components/_visibility.scss
+++ b/_sass/components/_visibility.scss
@@ -1,28 +1,32 @@
 // Screen reader support {
-  .sr,
-  .sr-only {
-    background: #fff;
-    color: #000;
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-  
-    &-focusable:active,
-    &-focusable:focus {
-      position: static;
-      width: auto;
-      height: auto;
-      margin: 0;
-      overflow: visible;
-      clip: auto;
-    }
-  }
+.sr,
+.sr-only {
+  background: #fff;
+  color: #000;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 
+  &-focusable:active,
+  &-focusable:focus {
+    position: static;
+    width: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    clip: auto;
+  }
+}
+
+// TODO: combine with .hidden?
+.hide {
+  display: none; 
+}
 
 .visuallyhidden {
   border: 0;
