--- a/_includes/heros/hero-accessibility.html
+++ b/_includes/heros/hero-accessibility.html
@@ -1,5 +1,5 @@
-<link rel="preload" href="{{ site.url }}/css/hero-accessibility.css?{{ site.time | date:'%s' }}">
-<link rel="stylesheet" href="{{ site.url }}/css/hero-accessibility.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-accessibility.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+
 <article class="hero-promo" id="#accessbility">
   <div class="container">
     <div class="hero-promo-content">
