--- a/_includes/heros/hero-courses-evergreen.html
+++ b/_includes/heros/hero-courses-evergreen.html
@@ -1,7 +1,6 @@
 <link rel="preload" href="{{ site.url }}/home/img/hero-courses-evergreen/bg-text-1920w.png?{{ site.time | date:'%s' }}" as="image">
 <link rel="preload" href="{{ site.url }}/home/img/hero-courses-evergreen/gym-gang-1280w.png?{{ site.time | date:'%s' }}" media="(min-width: 45.1em)" as="image">
-<link rel="preload" href="{{ site.url }}/css/hero-courses-evergreen.css?{{ site.time | date:'%s' }}">
-<link rel="stylesheet" href="{{ site.url }}/css/hero-courses-evergreen.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-courses-evergreen.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <article class="hero-promo" id="hero-courses-evergreen">
   <div class="container">
