--- a/_includes/heros/live-streams/content.html
+++ b/_includes/heros/live-streams/content.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/hero-live-stream.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-live-stream.css?{{ site.time | date:'%s' }}">
 
 <div id="live-stream">
 
