--- a/_includes/heros/hero-bbd-2018.html
+++ b/_includes/heros/hero-bbd-2018.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/hero-bbd-2018.css?{{ site.time | date:'%s' }}">
-
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-bbd-2018.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 <div class="hero-promo blue-beanie-day" id="hero-bbd-2018">
   <div class="container">
     <div class="row">
