--- a/_includes/heros/hero-collections.html
+++ b/_includes/heros/hero-collections.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="{{ site.url }}/css/hero-collections.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-collections.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+
 <div class="hero-promo">
   <div class="container">
     <div class="hero-content-copy">
