--- a/_includes/heros/hero-design-systems.html
+++ b/_includes/heros/hero-design-systems.html
@@ -1,5 +1,4 @@
-<link rel="preload" href="{{ site.url }}/css/hero-design-systems.css?{{ site.time | date:'%s' }}" as="style">
-<link rel="stylesheet" href="{{ site.url }}/css/hero-design-systems.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-design-systems.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo">
   <div class="container">
