--- a/_includes/heros/hero-dfg-2019.html
+++ b/_includes/heros/hero-dfg-2019.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/hero-dfg-2019.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-dfg-2019.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="hero-dfg-2019">
   <div class="container">
