--- a/_includes/heros/hero-dfg-2021.html
+++ b/_includes/heros/hero-dfg-2021.html
@@ -1,7 +1,5 @@
-<link rel="preload" href="{{ site.url }}/css/hero-dfg-2021.css?{{ site.time | date:'%s' }}" as="style">
 <link rel="preload" href="{{ site.url }}/home/img/hero-dfg-2021/designing-for-good-2021-hero-2000w.jpg" as="image" media="(min-width: 76em)">
-
-<link rel="stylesheet" href="{{ site.url }}/css/hero-dfg-2021.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-dfg-2021.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="hero-dfg-2021">
   <div class="container">
