--- a/_includes/heros/hero-take5-campaign.html
+++ b/_includes/heros/hero-take5-campaign.html
@@ -1,6 +1,5 @@
 <link rel="preload" href="{{ site.url }}/img/take5/posters/gym-5019-hero.jpg?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)">
-<link rel="preload" href="{{ site.url }}/css/hero-take5-campaign.css?{{ site.time | date:'%s' }}" as="style">
-<link rel="stylesheet" href="{{ site.url }}/css/hero-take5-campaign.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-take5-campaign.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="hero-take5-campaign">
   <div class="hero-content-art">
