--- a/_includes/heros/live-streams/embed-youtube.html
+++ b/_includes/heros/live-streams/embed-youtube.html
@@ -1,9 +1,21 @@
-<iframe src="https://www.youtube.com/embed/{{ hero.youtube_video_ID }}"
-        width="{{ hero.embed_width }}"
-        height="{{ hero.embed_height }}"
-        frameborder="{{ hero.embed_frameborder }}"
-        scrolling="{{ hero.embed_scrolling }}"
-        allowfullscreen="{{ hero.embed_allowfullscreen }}"
-        fetchpriority="{{ hero.embed_fetchpriority }}"
-        loading="{{ hero.embed_loading }}">
-</iframe>
+<div id="embed">
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/{{ hero.youtube_video_ID }}"
+            width="{{ hero.embed_width }}"
+            height="{{ hero.embed_height }}"
+            frameborder="{{ hero.embed_frameborder }}"
+            scrolling="{{ hero.embed_scrolling }}"
+            allowfullscreen="{{ hero.embed_allowfullscreen }}"
+            fetchpriority="{{ hero.embed_fetchpriority }}"
+            loading="{{ hero.embed_loading }}">
+    </iframe>
+  </div>
+  <div class="chat">
+    <iframe src="https://www.youtube.com/live_chat?v={{ hero.youtube_video_ID }}&embed_domain={{ domain_parent }}"
+            width="{{ hero.embed_width }}"
+            height="{{ hero.embed_width }}"
+            fetchpriority="{{ hero.embed_fetchpriority }}"
+            loading="{{ hero.embed_loading }}">
+    </iframe>
+  </div>
+</div>
