--- a/css/hero-live-stream.scss
+++ b/css/hero-live-stream.scss
@@ -5,90 +5,78 @@
 
 #live-stream {
   border-bottom: 4em solid $gym-dark-gray-2;
-}
 
-#live-stream header {
-  color: $gym-white;
-  background: $gym-dark-gray-2;
-  padding: 1.6em 0;
-}
+  header {
+    font-size: 16px;
+    color: $gym-white;
+    background: $gym-dark-gray-2;
+    padding: 1.6em 0;
 
-#live-stream header h2 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
+    h2 {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
 
-#live-stream .byline {
-  margin-top: .8em;
-  margin-bottom: 0;
-}
+    p {
+      font-size: 1.15em;
+      margin-top: 1em;
+      margin-bottom: 0;
+    }
 
-#live-stream .byline dd {
-  margin-top: .8em;
-  margin-left: 0;
-}
+    h2 + p {
+     margin-top: 0.4em;
+    }
 
-@include breakpoint(small, min) {
+    @include breakpoint(medium, min) {
 
-  #live-stream header h2,
-  #live-stream .byline,
-  #live-stream .byline dt {
-    display: inline;
+      & *:not(.container) {
+        display: inline;
+      }
+
+      p {
+        margin-left: 2ex;
+      }
+
+
+    }
+
   }
-
-  #live-stream header {
-    padding: 1.6em 0 .4em;
-  }
-
-  #live-stream header h2 {
-    line-height: 1;
-    vertical-align: baseline;
-  }
-
-  #live-stream .byline {
-    margin-left: 1.2em;
-  }
-
-  #live-stream .byline dd {
-    width: 52%;
-  }
-
 }
 
-// --- Twitch (Embed) ---*/
+// --- Embed stream (video/chat) ---*/
 
-#twitch {
+#embed,
+.video {
   position: relative;
 }
 
-#twitch iframe {
+#embed iframe {
   width: 100%;
   height: 100%;
   border: 0;
 }
 
-.twitch-video {
-  position: relative;
+.video {
   height: 0;
   padding-top: 56.25%;
+
+  iframe {
+    position: absolute;
+    top: 0;
+  }
 }
 
-.twitch-video iframe {
-  position: absolute;
-  top: 0;
-}
-
-.twitch-chat {
+.chat {
   height: 24em;
 }
 
 @include breakpoint(medium, min) {
-  .twitch-video {
+  .video {
     width: 75%;
     padding-top: 42.1875%;
   }
 
-  .twitch-chat {
+  .chat {
     position: absolute;
     top: 0;
     right: 0;
