--- a/css/heros/hero-live-stream.scss
+++ b/css/heros/hero-live-stream.scss
@@ -4,12 +4,12 @@
 @import 'mixins';
 
 #live-stream {
+  font-size: 16px;
+  background-color: $gym-dark-gray-2;
   border-bottom: 4em solid $gym-dark-gray-2;
 
   header {
-    font-size: 16px;
     color: $gym-white;
-    background: $gym-dark-gray-2;
     padding: 1.6em 0;
 
     h2 {
@@ -18,7 +18,7 @@
     }
 
     p {
-      font-size: 1.15em;
+      font-size: 1em;
       margin-top: 1em;
       margin-bottom: 0;
     }
@@ -50,10 +50,16 @@
   position: relative;
 }
 
-#embed iframe {
-  width: 100%;
-  height: 100%;
-  border: 0;
+#embed {
+  max-width: 75em;
+  border: 1px solid $gym-black;
+  margin: 0 auto;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
 
 .video {
