--- a/css/heros/hero-live-stream.scss
+++ b/css/heros/hero-live-stream.scss
@@ -37,7 +37,6 @@
         margin-left: 2ex;
       }
 
-
     }
 
   }
@@ -52,6 +51,7 @@
 
 #embed {
   max-width: 75em;
+  background-color: $gym-black;
   border: 1px solid $gym-black;
   margin: 0 auto;
 
@@ -60,33 +60,34 @@
     height: 100%;
     border: 0;
   }
-}
 
-.video {
-  height: 0;
-  padding-top: 56.25%;
-
-  iframe {
-    position: absolute;
-    top: 0;
-  }
-}
-
-.chat {
-  height: 24em;
-}
-
-@include breakpoint(medium, min) {
   .video {
-    width: 75%;
-    padding-top: 42.1875%;
+    height: 0;
+    padding-top: 56.25%;
+
+    iframe {
+      position: absolute;
+      top: 0;
+    }
   }
 
   .chat {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 25%;
-    height: 100%;
+    height: 24em;
   }
+
+  @include breakpoint(medium, min) {
+    .video {
+      width: 75%;
+      padding-top: 42.1875%;
+    }
+
+    .chat {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 25%;
+      height: 100%;
+    }
+  }
+
 }
