Update Gym orange
- Update main brand color to match Aquent
- Remove light orange (due to single-use)

--- a/css/main.scss
+++ b/css/main.scss
@@ -350,7 +350,7 @@ header.global {
 div.wrapper-footer {
   margin-top: 0;
   background-color: $gym-black;
-  border-top: 10px solid $gym-orange-light;
+  border-top: 10px solid $gym-orange;
   color: $gym-white;
   min-height: 170px;
 
