--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,6 +2,7 @@
 $gym-orange: #ff5f14;
 // $gym-orange-light: rgba(248, 151, 32, 0.9);
 $gym-black: #222;
+$gym-blue: #0077c8;
 $gym-white: #fff;
 $gym-gray: #ccc;
 $gym-gray-2: adjust-color($gym-gray, $lightness: 6.66%); // example: outputs #ddd, might as well hard-code this here
