--- a/_sass/components/_links_buttons.scss
+++ b/_sass/components/_links_buttons.scss
@@ -78,7 +78,7 @@ div.problem .save:not(:disabled) {
   border: 0;
   border-radius: 0.125em;
 
-  background-color: $gym-orange;
+  background-color: $gym-blue;
   color: $gym-white;
   font-weight: bold;
   font-size: 1em;
