--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -81,7 +81,7 @@
   color: #999;
 }
 .home .container-fluid:nth-of-type(odd) p a {
-  color: #f89820;
+  color: $gym-orange;
 }
 .home .container-fluid:nth-of-type(odd) h1 {
   color: #444;
