--- a/_sass/pages/_courses.scss
+++ b/_sass/pages/_courses.scss
@@ -63,7 +63,7 @@
     dd {
       display: list-item;
       list-style: disc;
-      color: #f89820;
+      color: $gym-orange;
       margin-top: 0.3em;
     }
     dd span {
