--- a/css/heros/hero-accessibility.scss
+++ b/css/heros/hero-accessibility.scss
@@ -139,7 +139,7 @@
   width: auto !important;
   background-color: transparent !important;
   padding: 1.2em 1.4em !important;
-  border: 2px solid $gym-orange !important;
+  border: 2px solid $gym-blue !important;
 }
 
 .hero-promo a.gym-button-secondary b {
