--- a/css/webinars.scss
+++ b/css/webinars.scss
@@ -47,12 +47,12 @@
   p {
     color: $gym-black;
   }
-  
+
   .banner-content {
     background-color: inherit;
     padding-bottom: 0;
   }
-  
+
   p {
     font: normal 1.25em/1.45 $gym-text-font-stack;
     margin-top: .6em;
@@ -73,7 +73,7 @@
     background-color: $gym-black;
     border-top: 1em solid $gym-gray;
   }
-  
+
   &--main {
     padding: 1.2em 1.2em 0;
 
@@ -84,7 +84,7 @@
       .title {
         color: $gym-white;
       }
-    
+
       .topic {
         font-size: 1em;
         line-height: 1;
@@ -104,12 +104,12 @@
         margin-top: .75rem;
       }
     }
-    
+
     p {
       font-size: 1em;
       color: $gym-gray;
     }
-    
+
     .datetime {
       color: $gym-white;
     }
@@ -152,7 +152,7 @@
   }
 
   @include breakpoint(58em, min) {
-    // legacy layout / fallback 
+    // legacy layout / fallback
     width: 100%;
     margin-top: 0;
 
@@ -199,7 +199,7 @@
   @include breakpoint(64em, min) {
     grid-column: span 3;
   }
-  
+
   header,
   header .subhead {
     max-width: none;
@@ -219,22 +219,22 @@
   li {
     margin-top: 1.2em;
   }
-  
+
   figure {
     text-align: left;
   }
-  
+
   img,
   figcaption {
     display: inline;
   }
-  
+
   img {
     width: 3.5em;
     border: 1px solid #999;
     margin-right: 1em;
   }
-  
+
   figcaption {
     font: bold 1em/1.25 $gym-text-font-stack;
     color: $gym-white;
@@ -245,7 +245,7 @@
     figcaption {
       font-size: 1.15em;
     }
-  
+
     img {
       width: 5.5em;
     }
@@ -260,7 +260,7 @@
 #main .gym-button-secondary {
   color: $gym-white;
   background-color: transparent;
-  border: 2px solid $gym-orange;
+  border: 2px solid $gym-blue;
 }
 
 #main .gym-button-secondary b {
@@ -268,10 +268,14 @@
   vertical-align: text-top;
 }
 
-#main .gym-button-secondary:hover,
+#main .gym-button-secondary:hover {
+  border-color: $gym-mid-gray;
+}
+
 #main .gym-button-secondary:focus,
 #main .gym-button-secondary:active {
-  border-color: $gym-light-gray;
+  border-color: $gym-dark-gray;
+
 }
 
 // main / article
@@ -290,7 +294,7 @@ main {
   article {
     padding: 2.2em;
     box-sizing: border-box;
-  
+
     @include breakpoint(60em, min) {
       float: left;
       width: 75%;
@@ -356,7 +360,7 @@ main {
     margin-top: 1em;
     margin-bottom: 1em;
   }
-  
+
   h2 + ul {
     padding-left: 1.15em;
     margin-top: 1.2em;
@@ -395,7 +399,7 @@ main {
       margin-top: 0;
       margin-bottom: .4em;
     }
-    
+
     h2 {
       font-weight: bold;
       font-size: 1.8em;
@@ -406,7 +410,7 @@ main {
       margin-top: 0;
       margin-bottom: .8em;
     }
-    
+
     h3 {
       line-height: 1.3;
       color: $gym-white;
@@ -424,17 +428,17 @@ main {
   &-design {
     background: $gym-magenta;
   }
-  
+
   // purple
   &-dev {
     background: $gym-purple;
   }
-  
+
   // blueish
   &-ux {
     background: $gym-teal;
   }
-  
+
   // green
   &-skills {
     background: $gym-green;
@@ -510,7 +514,7 @@ main {
       }
     }
   }
-  
+
   label {
     display: block;
     font: normal 1em/1.35 $gym-font-stack;
@@ -542,7 +546,7 @@ main {
     line-height: 1.4;
     margin-bottom: 1.4em;
     }
-  
+
   p.small-print {
     line-height: 1.25;
     margin-bottom: 1.2em;
@@ -575,7 +579,7 @@ main {
       border-top: 0;
       border-left: 1px dashed $gym-gray;
       margin-left: -1px;
-  
+
       header {
         padding-top: 1.2em;
       }
